--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
     "astro": "^3.4.3",
     "lodash": "^4.17.21",
     "typescript": "^5.2.2"
+  },
+  "devDependencies": {
+    "@cloudflare/workers-types": "^4.20231025.0",
+    "wrangler": "2.20.0"
   }
 }
