--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
   "dependencies": {
     "@astrojs/check": "^0.3.1",
     "@astrojs/cloudflare": "^7.6.4",
-    "@astropub/md": "^0.3.0",
     "@stdlib/random-base-triangular": "^0.1.0",
     "@types/lodash": "^4.14.201",
     "astro": "^3.4.3",
     "lodash": "^4.17.21",
+    "marked": "^9.1.5",
     "typescript": "^5.2.2"
   },
   "devDependencies": {
