done for the day

--- a/src/content/generators/enemies/anomalies.yaml
+++ b/src/content/generators/enemies/anomalies.yaml
@@ -1,4 +1,5 @@
-name: Anomalies
+singular: Anomaly
+plural: Anomalies
 tables:
   Description: anomaly_descriptions
   Signature: anomaly_signatures
