--- a/src/content/generators/locations/battlefields.yaml
+++ b/src/content/generators/locations/battlefields.yaml
@@ -1,4 +1,5 @@
-name: Battlefields
+singular: Battlefield
+plural: Battlefields
 tables:
   Description: battlefield_descriptions
   Layout: battlefield_layouts
