--- a/src/content/generators/locations/structures.yaml
+++ b/src/content/generators/locations/structures.yaml
@@ -1,4 +1,5 @@
-name: Structures
+singular: Structure
+plural: Structures
 tables:
   Description: structure_descriptions
   Owner: structure_owners
