--- a/src/content/generators/lore/coverups.yaml
+++ b/src/content/generators/lore/coverups.yaml
@@ -1,4 +1,5 @@
-name: Coverups
+singular: Coverups
+plural: Coverups
 tables:
   Description: coverup_descriptions
   Suppression: coverup_suppressions
