--- a/src/content/tables/corporation_schemes.yaml
+++ b/src/content/tables/corporation_schemes.yaml
@@ -1,6 +1,6 @@
 - Accumulate profit constantly in any way
-- Actually a front for a [criminal](/generate/faction/criminals) organization
-- "[Agency](/generate/faction/agencies) says \"jump,\" we say \"how high\""
+- Actually a front for a [criminal](/generate/factions/criminals) organization
+- "[Agency](/generate/factions/agencies) says \"jump,\" we say \"how high\""
 - All but openly purchase a small town
 - Burn evidence of an escaped [experiment](/generate/enemies/experiments)
 - Commodify a resource available for free
@@ -15,13 +15,13 @@
 - Hoard extraterrestrial R&D secrets
 - Hook workers on drugs (and pay them in drugs)
 - Ignore a [disaster](/generate/lore/disasters) caused by cost-cutting
-- "[Illegal merger](/generate/faction/corporations) (roll Corporations again)"
-- Indoctrinate workers into company [cult](/generate/faction/cults)
+- "[Illegal merger](/generate/factions/corporations) (roll Corporations again)"
+- Indoctrinate workers into company [cult](/generate/factions/cults)
 - Introduce a bad product to boost the old product
 - Knowingly produce mutagen-laced items
 - Lab test on captive [animals](/generate/enemies/animals)
 - Limit a resource so they can price gouge for it
-- Manipulate markets by funding [insurgents](/generate/faction/insurgents)
+- Manipulate markets by funding [insurgents](/generate/factions/insurgents)
 - No scheme, just doing a lot of coke
 - Pay off a [politician](/generate/characters/politicians) to establish new laws
 - Poach a [scientist](/generate/characters/scientists) from a rival organization
@@ -29,7 +29,7 @@
 - Record-breaking fundraiser (for a big write-off)
 - Replace their workforce with an army of clones
 - Research and develop from an [anomaly](/generate/enemies/anomalies)
-- Sell the Earth wholesale to invading [aliens](/generate/faction/aliens)
+- Sell the Earth wholesale to invading [aliens](/generate/factions/aliens)
 - Sue a [civilian](/generate/characters/civilians) for copyright infringement
 - Threaten whistleblowers with hitmen
 - Turn a [celebrity](/generate/characters/celebrities) into their spokesperson
