--- a/src/content/tables/insurgency_features.yaml
+++ b/src/content/tables/insurgency_features.yaml
@@ -1,14 +1,14 @@
-- "[Agency](/generate/faction/agencies) psyop"
-- "[Alien](/generate/faction/aliens) origin"
+- "[Agency](/generate/factions/agencies) psyop"
+- "[Alien](/generate/factions/aliens) origin"
 - Assassinations
 - Backroom torture
 - Blackmail experts
 - Book burning
 - Charismatic leader
 - Community outreach
-- "[Corporate](/generate/faction/corporations) backers"
-- "[Criminal](/generate/faction/criminals) contacts"
-- "[Cult](/generate/faction/cults) connections"
+- "[Corporate](/generate/factions/corporations) backers"
+- "[Criminal](/generate/factions/criminals) contacts"
+- "[Cult](/generate/factions/cults) connections"
 - Dead drops
 - Dogwhistling
 - Election meddling
