--- a/src/content/tables/insurgency_strategies.yaml
+++ b/src/content/tables/insurgency_strategies.yaml
@@ -1,10 +1,10 @@
-- "[Agency](/generate/faction/agencies)-created group, takes secret orders"
+- "[Agency](/generate/factions/agencies)-created group, takes secret orders"
 - Appropriate money from federal payrolls
 - Build a [robot](/generate/enemies/robots) weapon to surpass all others
 - Campaign for an unconventional candidate
 - Chain themselves to buildings or trees
 - Co-opt known graffiti spots
-- Collaborate with [criminals](/generate/faction/criminals) on disaster relief
+- Collaborate with [criminals](/generate/factions/criminals) on disaster relief
 - Define an outgroup and demonize them
 - Discourage targets from driving via car bombs
 - Distribute samizdat or self-published zines
@@ -13,7 +13,7 @@
 - Incite waves of riots in the streets
 - Kidnap union heads and deploy scabs
 - Make their ideology seem fun
-- Merge with a [cult](/generate/faction/cults) to build zealous fervor
+- Merge with a [cult](/generate/factions/cults) to build zealous fervor
 - Obtain a fully functional nuclear warhead
 - Picket and protest until someone listens
 - Plaster common areas with propaganda flyers
@@ -25,7 +25,7 @@
 - Scapegoat a vulnerable [civilian](/generate/characters/civilians) via media
 - Secure a [celebrity’s](/generate/characters/celebrities) endorsement
 - Seize control of and convert a [structure](/generate/location/structures)
-- Send a starbound SOS for [alien](/generate/faction/aliens) assistance
+- Send a starbound SOS for [alien](/generate/factions/aliens) assistance
 - Shock the public with a televised execution
 - Spin a new image of their ideology, reroll description
 - Steal and weaponize an [experiment](/generate/enemies/experiments)
