--- a/src/content/tables/gear_weapon_skins.yaml
+++ b/src/content/tables/gear_weapon_skins.yaml
@@ -61,21 +61,16 @@
 - Diverse fabrics
 - Dragon decals
 - Draped in pearls
-- Dried gore stains
-- Ectoplasmic
-- Electric yellow
-- Embroidered
+- Dried gore stains Ectoplasmic
+- Electric yellow Embroidered
 - Engraved roses
 - Engraved word
-- Etched equations
-- Exposed electronics
-- Faintly hums
+- Etched equations Exposed electronics Faintly hums
 - Faux fur accents
 - FIST emblem
 - Floral print
 - Forest camo
-- Four-leaf clover decal
-- Frost crystals
+- Four-leaf clover decal Frost crystals
 - Fuligin
 - Fungal growths
 - Galaxy print
@@ -85,25 +80,14 @@
 - Glitch effects
 - Glow in the dark
 - Glowing radioactive
-- Glut of attachments
-- Gradient paint job
+- Glut of attachments Gradient paint job
 - Gray plastic
-- Grotesquely segmented
-- Growing hair
-- Gutted for lighter weight
-- Half-melted
+- Grotesquely segmented Growing hair
+- Gutted for lighter weight Half-melted
 - Harvest gold
-- Has a face
-- Hastily-scratched runes
-- Healthy moss covering
-- High-pitched whine
-- Hologram projection
-- Holographic casing
+- Has a face Hastily-scratched runes Healthy moss covering High-pitched whine Hologram projection Holographic casing
 - Hot rod flames
-- Ideological symbols
-- Illuminated with mythic art
-- Impossible serial number
-- Incense smell
+- Ideological symbols Illuminated with mythic art Impossible serial number Incense smell
 - Incessantly jittery
 - Insect cloud
 - Iridescent finish
@@ -160,9 +144,7 @@
 - Reflective tape
 - Releases confetti
 - Religious iconography
-- Rich leather accents
-- Roman numerals
-- Rose gold
+- Rich leather accents 542. Roman numerals 543. Rose gold
 - Rosewood grip
 - Rust-bitten
 - Sacred geometry
@@ -198,8 +180,7 @@
 - Topographic texture
 - Trickles blood
 - TV static cutout
-- Twenty-four carat gold plating
-- Two-dimensional
+- Twenty-four carat gold plating 644. Two-dimensional
 - Unfinished gunmetal
 - Uniformly ribbed
 - Urban camo
